# retraining-clothing-image-segmentation

./: .env.example  .gitignore  README.md  pyproject.toml
src/: huggingface_api_cloth_seg.ipynb  image_handling.py  main.py  utils.py
